# MedData

./: .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data_generator/: __main__.py  adverse_events.py  cli.py  demographics.py  generate.py  reference_data.py  sampling.py  vitals.py  writers.py
docker/: dbt.Dockerfile  evidence.Dockerfile  prefect.Dockerfile
tests/: test_data_generator.py
